Doc/force-app/main/default/objects/Sales_Productivity_with_OPC_Snapshot__c/fields/Associated_Contract_OSA__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contract_OSA__c</fullName>
    <label>Associated Contract (OSA)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>