Doc/force-app/main/default/objects/Sales_Productivity_with_OPC_Snapshot__c/fields/CSM_Account_Mgr__c.field-meta.xml
<CustomField>
    <fullName>CSM_Account_Mgr__c</fullName>
    <label>CSM Account Mgr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>