Doc/force-app/main/default/objects/Sales_Productivity_with_OPC_Snapshot__c/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <label>Geography</label>
    <length>255</length>
    <type>Text</type>
</CustomField>