Doc/force-app/main/default/objects/Sales_Productivity_with_OPC_Snapshot__c/fields/Lawyers_Professionals__c.field-meta.xml
<CustomField>
    <fullName>Lawyers_Professionals__c</fullName>
    <label>Lawyers / Professionals</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>