Doc/force-app/main/default/objects/Sales_Productivity_with_OPC_Snapshot__c/fields/Product_Line_Simple__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Simple__c</fullName>
    <label>Product Line - Simple</label>
    <length>255</length>
    <type>Text</type>
</CustomField>