Doc/force-app/main/default/objects/Sales_Productivity_with_OPC_Snapshot__c/fields/Sale_Category_OPC__c.field-meta.xml
<CustomField>
    <fullName>Sale_Category_OPC__c</fullName>
    <label>Sale Category (OPC)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>