Doc/force-app/main/default/objects/Sales_Productivity_with_OPC_Snapshot__c/fields/Sales_Territory__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory__c</fullName>
    <description>Field name changed from &apos;Sales Territory&apos; to &apos;Sales Segment&apos; as per FreshDesk #21822</description>
    <label>Sales Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>