Doc/force-app/main/default/objects/Sales_Productivity_with_OPC_Snapshot__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>